tests/parsing/smtlib/v2.6/errors/050_check-sat_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/050_check-sat_unclosed_1.smt2", line 2, character 11-12:
2 | (check-sat _)
               ^
Error while parsing a check-sat command, read the reserved word '_',
      but expected a closing parenthesis.
